seconda parte bug fix